# dinov3

./: .gitignore  README.md  pyproject.toml
models/: .gitignore
notebooks/: chmv2_dataset_exploration.ipynb  chmv2_inference.ipynb  dinotxt_inference.ipynb
