[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinov3"
description = "A computer vision project based on DINOv3"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Meta AI" }
]
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

dependencies = [
    "boto3>=1.38.23",
    "matplotlib>=3.10.3",
    "rasterio",
    "geopandas>=1.1.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "ftfy",
    "omegaconf",
    "regex",
    "scikit-learn",
    "submitit",
    "termcolor",
    "torchmetrics",
    "tqdm",
    "transformers",
    "accelerate"
]

[project.urls]
Homepage = "https://github.com/facebookresearch/dinov3"

[dependency-groups]
dev = [
    "docstr-coverage==2.3.2",
    "mypy[reports]==1.17",
    "pylint==3.3.8",
    "ruff==0.12.8",
]

[tool.setuptools]
packages = ["dinov3"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools.dynamic]
version = { attr = "dinov3.__version__" }

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = "dinov3"
exclude = '''(?x)(
  ^dinov3/tests/([^/]+/)*test_.*\.py$  # Unit tests
)'''

[tool.pylint.master]
persistent = false
score = false

[tool.pylint.messages_control]
disable = "all"
enable = [
  "miscellaneous",
  "similarities",
]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
min-similarity-lines = 8

[tool.pylint.reports]
reports = false

[tool.pylint.miscellaneous]
notes = [
  "FIXME",
  "XXX",
  "TODO",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"hubconf.py" = ["F401"]

# Tell uv exactly where to fetch PyTorch wheels.
# Swap the URL suffix for your CUDA build: cpu, cu121, cu124, etc.
# See https://pytorch.org/get-started/locally/ for the full list.
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# Bind torch & torchvision packages to the explicit PyTorch index instead of PyPI
[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
